--- a/Bots/DotNet/Consumers/Composer/SimpleHostBotComposer/runtime/customaction/Microsoft.BotFramework.Composer.CustomAction.csproj
+++ b/Bots/DotNet/Consumers/Composer/SimpleHostBotComposer/runtime/customaction/Microsoft.BotFramework.Composer.CustomAction.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Library</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Bot.Builder.Dialogs.Adaptive" Version="4.12.2" />
+    <PackageReference Include="Microsoft.Bot.Builder.Dialogs.Adaptive" Version="4.13.0" />
   </ItemGroup>
 
 </Project>
