--- a/Bots/DotNet/Skills/CodeFirst/EchoSkillBot-v3/packages.config
+++ b/Bots/DotNet/Skills/CodeFirst/EchoSkillBot-v3/packages.config
@@ -1,37 +1,128 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Autofac" version="4.6.0" targetFramework="net46" />
+  <package id="Autofac" version="6.1.0" targetFramework="net472" />
+  <package id="Azure.Core" version="1.3.0" targetFramework="net472" />
   <package id="Chronic.Signed" version="0.3.2" targetFramework="net46" />
-  <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
-  <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net46" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net46" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net46" />
-  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net46" />
-  <package id="Microsoft.Azure.DocumentDB" version="1.22.0" targetFramework="net46" />
-  <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net46" />
-  <package id="Microsoft.Bot.Builder" version="3.30.0" allowedVersions="[,4.0)" targetFramework="net46" />
-  <package id="Microsoft.Bot.Builder.Azure" version="3.16.3.40383" allowedVersions="[,4.0)" targetFramework="net46" />
+  <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi" version="5.2.7" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.7" targetFramework="net472" />
+  <package id="Microsoft.Azure.Cosmos" version="3.15.1" targetFramework="net472" />
+  <package id="Microsoft.Azure.DocumentDB" version="2.14.0" targetFramework="net472" />
+  <package id="Microsoft.Azure.DocumentDB.Core" version="2.13.1" targetFramework="net472" />
+  <package id="Microsoft.Azure.KeyVault.Core" version="3.0.5" targetFramework="net472" />
+  <package id="Microsoft.Azure.Storage.Blob" version="9.4.2" targetFramework="net472" />
+  <package id="Microsoft.Azure.Storage.Common" version="9.4.2" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net472" />
+  <package id="Microsoft.Bcl.HashCode" version="1.1.0" targetFramework="net472" />
+  <package id="Microsoft.Bot.Builder" version="4.13.0" targetFramework="net472" />
+  <package id="Microsoft.Bot.Builder.Azure" version="4.13.0" targetFramework="net472" />
   <package id="Microsoft.Bot.Builder.History" version="3.30.0" allowedVersions="[,4.0)" targetFramework="net46" />
-  <package id="Microsoft.Bot.Connector" version="3.30.0" allowedVersions="[,4.0)" targetFramework="net46" />
-  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.4" targetFramework="net46" />
+  <package id="Microsoft.Bot.Connector" version="4.13.0" targetFramework="net472" />
+  <package id="Microsoft.Bot.Schema" version="4.13.0" targetFramework="net472" />
+  <package id="Microsoft.Bot.Streaming" version="4.13.0" targetFramework="net472" />
+  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="3.6.0" targetFramework="net472" />
   <package id="Microsoft.Data.Edm" version="5.8.4" targetFramework="net46" />
   <package id="Microsoft.Data.OData" version="5.8.4" targetFramework="net46" />
   <package id="Microsoft.Data.Services.Client" version="5.8.4" targetFramework="net46" />
-  <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="4.4.0" targetFramework="net46" />
-  <package id="Microsoft.IdentityModel.Logging" version="1.1.4" targetFramework="net46" />
+  <package id="Microsoft.Extensions.Configuration" version="2.1.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.1.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="2.1.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="2.1.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.1.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Http" version="2.1.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging" version="2.1.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="2.1.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Options" version="2.1.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Primitives" version="2.1.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="5.2.9" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.JsonWebTokens" version="6.10.2" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Logging" version="6.10.2" targetFramework="net472" />
   <package id="Microsoft.IdentityModel.Protocol.Extensions" version="1.0.4.403061554" targetFramework="net46" />
-  <package id="Microsoft.IdentityModel.Protocols" version="2.1.4" targetFramework="net46" />
-  <package id="Microsoft.IdentityModel.Protocols.OpenIdConnect" version="2.1.4" targetFramework="net46" />
-  <package id="Microsoft.IdentityModel.Tokens" version="5.1.4" targetFramework="net46" />
-  <package id="Microsoft.Net.Compilers" version="2.0.1" targetFramework="net46" developmentDependency="true" />
-  <package id="Microsoft.Rest.ClientRuntime" version="2.3.8" targetFramework="net46" />
+  <package id="Microsoft.IdentityModel.Protocols" version="6.10.2" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Protocols.OpenIdConnect" version="6.10.2" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Tokens" version="6.10.2" targetFramework="net472" />
+  <package id="Microsoft.Net.Compilers" version="3.9.0" targetFramework="net472" developmentDependency="true" />
+  <package id="Microsoft.Net.Http.Headers" version="2.1.0" targetFramework="net472" />
+  <package id="Microsoft.NETCore.Platforms" version="1.1.1" targetFramework="net472" />
+  <package id="Microsoft.NETCore.Targets" version="1.1.3" targetFramework="net472" />
+  <package id="Microsoft.Rest.ClientRuntime" version="2.3.23" targetFramework="net472" />
+  <package id="Microsoft.Rest.ClientRuntime.Azure" version="3.3.18" targetFramework="net472" />
+  <package id="Microsoft.Win32.Primitives" version="4.0.1" targetFramework="net472" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.2.3" targetFramework="net46" />
-  <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net46" />
+  <package id="NETStandard.Library" version="1.6.0" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
+  <package id="System.AppContext" version="4.1.0" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Collections" version="4.3.0" targetFramework="net46" />
-  <package id="System.IdentityModel.Tokens.Jwt" version="5.1.4" targetFramework="net46" />
+  <package id="System.Collections.Concurrent" version="4.0.12" targetFramework="net472" />
+  <package id="System.Collections.Immutable" version="1.7.0" targetFramework="net472" />
+  <package id="System.Collections.NonGeneric" version="4.0.1" targetFramework="net472" />
+  <package id="System.Collections.Specialized" version="4.0.1" targetFramework="net472" />
+  <package id="System.Configuration.ConfigurationManager" version="4.5.0" targetFramework="net472" />
+  <package id="System.Console" version="4.0.0" targetFramework="net472" />
+  <package id="System.Diagnostics.Debug" version="4.0.11" targetFramework="net472" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.7.1" targetFramework="net472" />
+  <package id="System.Diagnostics.Tools" version="4.0.1" targetFramework="net472" />
+  <package id="System.Diagnostics.TraceSource" version="4.0.0" targetFramework="net472" />
+  <package id="System.Diagnostics.Tracing" version="4.1.0" targetFramework="net472" />
+  <package id="System.Dynamic.Runtime" version="4.0.11" targetFramework="net472" />
+  <package id="System.Globalization" version="4.0.11" targetFramework="net472" />
+  <package id="System.Globalization.Calendars" version="4.0.1" targetFramework="net472" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="6.10.2" targetFramework="net472" />
+  <package id="System.IO" version="4.3.0" targetFramework="net472" />
+  <package id="System.IO.Compression" version="4.1.0" targetFramework="net472" />
+  <package id="System.IO.Compression.ZipFile" version="4.0.1" targetFramework="net472" />
+  <package id="System.IO.FileSystem" version="4.0.1" targetFramework="net472" />
+  <package id="System.IO.FileSystem.Primitives" version="4.0.1" targetFramework="net472" />
   <package id="System.Linq" version="4.3.0" targetFramework="net46" />
+  <package id="System.Linq.Expressions" version="4.1.0" targetFramework="net472" />
+  <package id="System.Linq.Queryable" version="4.0.1" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net472" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="net472" />
+  <package id="System.Net.Http.WinHttpHandler" version="4.5.0" targetFramework="net472" />
+  <package id="System.Net.NameResolution" version="4.0.0" targetFramework="net472" />
+  <package id="System.Net.NetworkInformation" version="4.1.0" targetFramework="net472" />
+  <package id="System.Net.Primitives" version="4.0.11" targetFramework="net472" />
+  <package id="System.Net.Requests" version="4.0.11" targetFramework="net472" />
+  <package id="System.Net.Security" version="4.3.2" targetFramework="net472" />
+  <package id="System.Net.Sockets" version="4.1.0" targetFramework="net472" />
+  <package id="System.Net.WebHeaderCollection" version="4.0.1" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
+  <package id="System.ObjectModel" version="4.0.12" targetFramework="net472" />
+  <package id="System.Private.Uri" version="4.3.2" targetFramework="net472" />
+  <package id="System.Reflection" version="4.1.0" targetFramework="net472" />
+  <package id="System.Reflection.Extensions" version="4.0.1" targetFramework="net472" />
+  <package id="System.Reflection.Primitives" version="4.0.1" targetFramework="net472" />
+  <package id="System.Resources.ResourceManager" version="4.0.1" targetFramework="net472" />
+  <package id="System.Runtime" version="4.3.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net472" />
+  <package id="System.Runtime.Extensions" version="4.1.0" targetFramework="net472" />
+  <package id="System.Runtime.Handles" version="4.0.1" targetFramework="net472" />
+  <package id="System.Runtime.InteropServices" version="4.1.0" targetFramework="net472" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.0.0" targetFramework="net472" />
+  <package id="System.Runtime.Numerics" version="4.0.1" targetFramework="net472" />
+  <package id="System.Runtime.Serialization.Primitives" version="4.1.1" targetFramework="net472" />
+  <package id="System.Security.AccessControl" version="4.5.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.Permissions" version="4.5.0" targetFramework="net472" />
+  <package id="System.Security.Principal.Windows" version="4.5.0" targetFramework="net472" />
+  <package id="System.Security.SecureString" version="4.0.0" targetFramework="net472" />
   <package id="System.Spatial" version="5.8.4" targetFramework="net46" />
+  <package id="System.Text.Encoding" version="4.0.11" targetFramework="net472" />
+  <package id="System.Text.Encoding.Extensions" version="4.0.11" targetFramework="net472" />
+  <package id="System.Text.RegularExpressions" version="4.1.0" targetFramework="net472" />
+  <package id="System.Threading" version="4.0.11" targetFramework="net472" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net46" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
+  <package id="System.Threading.Timer" version="4.0.1" targetFramework="net472" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
   <package id="System.Web.Http.Common" version="4.0.20126.16343" targetFramework="net46" />
-  <package id="WindowsAzure.Storage" version="7.2.1" targetFramework="net46" />
+  <package id="System.Xml.ReaderWriter" version="4.0.11" targetFramework="net472" />
+  <package id="System.Xml.XDocument" version="4.0.11" targetFramework="net472" />
+  <package id="WindowsAzure.Storage" version="9.3.3" targetFramework="net472" />
 </packages>
